# model-character-limit-gemini

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_gemini_transcript.jsonl  research_prompt.txt  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: metrics.json  raw_data.jsonl
src/: analysis.py  data_generator.py  experiment_runner.py
