[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "numpy",
    "scikit-learn",
    "python-dotenv",
    "tenacity"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]